<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.view.fragment.detail.DetailMovieFragment">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_210dp"
            android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:theme="@style/AppBarTheme"
                app:contentScrim="?android:attr/colorPrimary"
                app:expandedTitleMarginEnd="@dimen/dimen_48dp"
                app:expandedTitleMarginStart="@dimen/dimen_48dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                    android:id="@+id/backdropImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/movie_description_background"
                    app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detailsToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_marginBottom="@dimen/dimen_48dp"
                app:cardBackgroundColor="@color/light_gray"
                app:cardCornerRadius="@dimen/corner_radius_card_movie_4"
                app:cardElevation="@dimen/elevation_card_movie_6"
                app:cardUseCompatPadding="true">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/titleText"
                        style="@style/DetailMovieTextTheme"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dimen_132"
                        android:gravity="center"
                        android:paddingEnd="@dimen/dimen_24dp"
                        android:paddingStart="@dimen/dimen_24dp"
                        android:textSize="@dimen/text_size_32"
                        android:textStyle="bold"
                        tools:text="Fast and Furious Presents: Hobbs and Shaw"/>

                <View android:layout_width="match_parent"
                      android:layout_height="@dimen/dimen_2dp"
                      android:layout_marginTop="@dimen/dimen_28dp"
                      android:background="@color/dark_gray"/>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/dimen_28dp"
                        android:paddingStart="@dimen/dimen_20dp"
                        android:paddingEnd="@dimen/dimen_20dp">

                    <ImageView
                            android:id="@+id/averageIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/averageText"
                            android:layout_alignStart="@+id/averageText"
                            android:src="@drawable/ic_vote_average"/>

                    <TextView
                            android:id="@+id/averageText"
                            style="@style/DetailMovieTextTheme"
                            android:layout_below="@+id/averageIcon"
                            android:gravity="center"
                            android:layout_toStartOf="@+id/releaseDateText"
                            android:layout_alignParentStart="true"
                            tools:text="6.0/10.0"/>

                    <ImageView
                            android:id="@+id/releaseDateIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/releaseDateText"
                            android:layout_alignStart="@+id/releaseDateText"
                            android:layout_alignBottom="@+id/votesText"
                            android:src="@drawable/ic_date_release"/>

                    <TextView
                            android:id="@+id/releaseDateText"
                            style="@style/DetailMovieTextTheme"
                            android:layout_below="@+id/releaseDateIcon"
                            android:layout_centerInParent="true"
                            android:textSize="@dimen/text_size_22"
                            android:gravity="center"
                            android:layout_alignStart="@+id/view"
                            android:layout_alignEnd="@+id/view"
                            android:layout_alignBottom="@+id/languageIcon"
                            tools:text="13 Jul 2019"/>

                    <ImageView
                            android:id="@+id/votesIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/votesText"
                            android:layout_alignStart="@id/votesText"
                            android:src="@drawable/ic_votes"/>

                    <TextView
                            android:id="@+id/votesText"
                            style="@style/DetailMovieTextTheme"
                            android:layout_below="@+id/votesIcon"
                            android:layout_alignParentEnd="true"
                            android:gravity="center"
                            android:layout_toEndOf="@+id/releaseDateText"
                            app:autoSizeTextType="uniform"
                            tools:text="2080"/>

                    <View
                            android:id="@+id/view"
                            android:layout_width="@dimen/dimen_150"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/releaseDateText"
                            android:layout_height="0dp"/>

                    <ImageView
                            android:id="@+id/languageIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_15dp"
                            android:layout_alignStart="@id/averageText"
                            android:layout_alignEnd="@id/averageText"
                            android:layout_below="@+id/averageText"
                            android:src="@drawable/ic_language"/>

                    <TextView
                            android:id="@+id/languageText"
                            style="@style/DetailMovieTextTheme"
                            android:layout_alignStart="@id/languageIcon"
                            android:layout_alignEnd="@id/languageIcon"
                            android:layout_below="@+id/languageIcon"
                            android:gravity="center"
                            tools:text="en"/>

                    <ImageView
                            android:id="@+id/popularIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_15dp"
                            android:layout_centerInParent="true"
                            android:layout_below="@+id/votesText"
                            android:layout_alignStart="@+id/votesText"
                            android:layout_alignEnd="@id/votesText"
                            android:src="@drawable/ic_popular"/>

                    <TextView
                            android:id="@+id/popularText"
                            style="@style/DetailMovieTextTheme"
                            android:layout_below="@+id/popularIcon"
                            android:layout_alignStart="@+id/popularIcon"
                            android:layout_alignEnd="@id/popularIcon"
                            android:gravity="center"
                            app:autoSizeTextType="uniform"
                            tools:text="220.000"/>

                </RelativeLayout>

                <View android:layout_width="match_parent"
                      android:layout_height="@dimen/dimen_2dp"
                      android:layout_marginTop="@dimen/dimen_28dp"
                      android:background="@color/dark_gray"/>

                <TextView
                        style="@style/DetailMovieTextTheme"
                        android:layout_marginTop="@dimen/dimen_28dp"
                        android:layout_gravity="center"
                        android:text="@string/movie_overview"
                        android:textSize="@dimen/text_size_20"
                        android:textStyle="bold"/>


                <TextView
                        android:id="@+id/overviewText"
                        style="@style/DetailMovieTextTheme"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:maxLines="10"
                        android:layout_marginTop="@dimen/dimen_15dp"
                        android:lineSpacingExtra="@dimen/dimen_4dp"
                        android:paddingBottom="@dimen/dimen_15dp"
                        android:paddingEnd="@dimen/dimen_24dp"
                        android:paddingStart="@dimen/dimen_24dp"
                        android:textSize="@dimen/text_size_18"
                        tools:text="A spinoff of The Fate of the Furious, focusing on Johnson's US Diplomatic Security Agent Luke Hobbs forming an unlikely alliance with Statham's Deckard Shaw."/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
            android:id="@+id/posterCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/corner_radius_card_movie"
            app:cardElevation="@dimen/elevation_card_movie_4"
            app:cardUseCompatPadding="true"
            app:layout_anchor="@id/appBar"
            app:layout_anchorGravity="bottom|center">

        <ImageView
                android:id="@+id/posterImageView"
                android:layout_width="@dimen/dimen_140"
                android:layout_height="@dimen/dimen_210dp"
                android:contentDescription="@string/poster_info"
                android:scaleType="centerCrop"
                android:transitionName="posterTransition"/>
    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>